[package]
name = "set4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
base64 = "0.21.4"
byteorder = "1.5.0"
hex = "0.4.3"
rand = "0.8.5"
set1 = { path = "../set1" }
set2 = { path = "../set2" }
set3 = { path = "../set3" }
